重构工作流模型解析，使用通用的Dag结构